test/mason/mason-prereq/prereq-errors.good
Command failed: 'make MASON_PACKAGE_HOME=/Users/jade/Development/chapel-lang/chapel/test/mason/mason-prereq/prereq3'
mason utils   : hello.c:6:27: error: expected
