test/mason/mason-prereq/prereq-errors.masontest
#!/usr/bin/env bash

set -eo pipefail

cd prereq3


MASON_LOG_LEVEL=info mason build | grep 'error:' | sed -E 's/^(.*expected).*$/\1/'
